{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 32,
  "lineage": "4489f609-f3db-27bd-ade6-2d823e31dee0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:security-group/sg-0a2c2950317104f6d",
            "description": "sg_bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "sg_bastion",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0a2c2950317104f6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "sg_bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_bastion",
            "name_prefix": "",
            "owner_id": "662072000689",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_bastion"
            },
            "tags_all": {
              "Name": "sg_bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a289de2c2340166"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:security-group/sg-07c4efcefbe8666ca",
            "description": "sg_eks",
            "egress": [],
            "id": "sg-07c4efcefbe8666ca",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "sg_eks",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a2c2950317104f6d"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_eks",
            "name_prefix": "",
            "owner_id": "662072000689",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_eks"
            },
            "tags_all": {
              "Name": "sg_eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a289de2c2340166"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_bastion"
          ]
        }
      ]
    }
  ]
}